# fastpdf2png

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bench_native.cpp
.github/workflows/: build.yml  ci.yml
benchmarks/: CMakeLists.txt  bench_native.cpp
bindings/node/: index.js
bindings/python/: README.md  pyproject.toml
cmake/: FindPDFium.cmake
fastpdf2png/: __init__.py  converter.py  native.py
scripts/: get_pdfium.sh
src/: lib.cpp  lib.h  main.cpp  png_writer.cpp
src/cli/: args.cpp  daemon_cmd.cpp  main.cpp  raw_cmd.cpp  render_cmd.cpp  render_cmd.h  shared_cmd.h
src/cli/platform/: pool_unix.cpp  pool_win.cpp  render_platform.h  render_unix.cpp  render_win.cpp
src/internal/: file_io.cpp  file_io.h  pdfium_render.cpp  pdfium_render.h  shared_memory.cpp  shared_memory.h
src/lib/: c_api.cpp  engine.cpp  pool.cpp
src/png/: png_writer.cpp  png_writer.h
tests/: CMakeLists.txt
tests/integration/: test_production.cpp  test_roundtrip.cpp
tests/python/: conftest.py  test_converter.py
tests/unit/: test_png_writer.cpp
